// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge accept jsx as children 1`] = `
<DocumentFragment>
  <span
    class="css-iu2at0"
    data-cy="badge"
  >
    <span>
      string
    </span>
  </span>
</DocumentFragment>
`;

exports[`Badge danger 1`] = `
<DocumentFragment>
  <span
    class="css-1v2vcel"
    data-cy="badge"
  >
    danger
  </span>
</DocumentFragment>
`;

exports[`Badge default 1`] = `
<DocumentFragment>
  <span
    class="css-iu2at0"
    data-cy="badge"
  >
    default
  </span>
</DocumentFragment>
`;

exports[`Badge outline 1`] = `
<DocumentFragment>
  <span
    class="css-wrizyw"
    data-cy="badge"
  >
    outline
  </span>
</DocumentFragment>
`;

exports[`Badge primary 1`] = `
<DocumentFragment>
  <span
    class="css-1bcogwf"
    data-cy="badge"
  >
    primary
  </span>
</DocumentFragment>
`;

exports[`Badge success 1`] = `
<DocumentFragment>
  <span
    class="css-1nxr7gm"
    data-cy="badge"
  >
    success
  </span>
</DocumentFragment>
`;

exports[`Badge warning 1`] = `
<DocumentFragment>
  <span
    class="css-dsjkko"
    data-cy="badge"
  >
    warning
  </span>
</DocumentFragment>
`;
